likely fix for env heroku

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -145,7 +145,7 @@ test:
 production:
   clients:
     default:
-      uri: ENV['PROD_MONGODB']
+      uri: <%= ENV['PROD_MONGODB'] %>
 
       options:
         connect_timeout: 15
